cmd/sphinx/k8s/01-sphinx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sphinx-service
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sphinx-service
  template:
    metadata:
      labels:
        app: sphinx-service
    spec:
      containers:
      - name: sphinx-service
        image: entropypool/sphinx-service:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sphinx-service
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 8080
